# stockrs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  demo_makefile  docker-compose-postgres.yml
.sqlx/: query-20cf7bf4c29b9b14ff46123e9c923e70589c71d6a81ccbcc94c5f801a589b941.json  query-26b2e8bf4ed851296dfd2456370e369b0ed10cbe39c643be26ed4c545b13dd3c.json  query-7b513c439e188b3f63f205b29bc1664d5d85f389d24ac63cad70b26e3fad12cd.json  query-7c02595a6e983b050e2559c4efa9802fa9980fa78b3b8969808e6d1b4fa0f7fe.json
migrations/: 20240623120523_create_user.down.sql  20240623120523_create_user.up.sql
src/: conn.rs  helpers.rs  lib.rs  main.rs  server.rs
src/common/: response.rs
src/guide/: asyncer.rs  builder.rs  cancel_task.rs  channels_thread.rs  constgen.rs  effective.rs  errors.rs  ffi.rs  generics.rs  iters.rs  lifetimes.rs  linkedlist_double.rs  linkedlist_immut.rs  linkedlist_stack.rs  macros.rs  mem.rs  mod.rs  observer.rs  quicksort.rs  run.rs  strings.rs  test.rs  threadpool.rs
src/web/: errors.rs  jwt.rs  merge_routes.rs  real_error.rs  use_auth_by_session.rs
