[package]
name = "stockrs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5" }
http-body-util = "0.1.0"
hyper = "1.0.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["timeout"]}
tower-http = { version = "0.5.0", features = ["map-request-body", "util", "trace"] }
tracing = "0.1.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.115"
futures = "0.3.30"
anyhow = "1.0.82"
thiserror = "1.0.59"
dotenv = "0.15.0"
